--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,20 @@ env:
   global:
     - CC_TEST_REPORTER_ID=62c3cc32f27d201dd0c1b5bfa6f345a0d9c8caf2d98488eff43839b8d308c7cf
 language: ruby
+services:
+  - mysql
+cache:
+  bundler: true
 rvm:
   - 2.2.10
 before_script:
+  - mysql -e 'CREATE DATABASE bio_test;'
+  - "cp .travis.database.yml ./config/database.yml"
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 script:
   - bundle exec rspec
+  - bundle exec cucumber
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
