--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,19 @@ cache:
   bundler: true
 rvm:
   - 2.2.10
+matrix:
+  include:
+    - rvm: 2.2.10
+      gemfile: Gemfile
+      script: bundle exec rspec
+    - rvm: 2.2.10
+      gemfile: Gemfile
+      script: bundle exec cucumber
 before_script:
   - mysql -e 'CREATE DATABASE bio_test;'
   - "cp .travis.database.yml ./config/database.yml"
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-script:
-  - bundle exec rspec
-  - bundle exec cucumber
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
