--- a/.travis.yml
+++ b/.travis.yml
@@ -13,20 +13,17 @@ matrix:
     - rvm: 2.2.10
       gemfile: Gemfile
       script: bundle exec rspec
-      after_script:
-        - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.rspec.json coverage/rspec/.resultset.json
-        - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
-        - ./cc-test-reporter upload-coverage
+      after_script: ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.rspec.json coverage/rspec/.resultset.json
     - rvm: 2.2.10
       gemfile: Gemfile
       script: bundle exec cucumber
-      after_script:
-        - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.cucumber.json coverage/cucumber/.resultset.json
-        - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
-        - ./cc-test-reporter upload-coverage
+      after_script: ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.cucumber.json coverage/cucumber/.resultset.json
 before_script:
   - mysql -e 'CREATE DATABASE bio_test;'
   - "cp .travis.database.yml ./config/database.yml"
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+after_script:
+  - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
+  - ./cc-test-reporter upload-coverage
