--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ matrix:
     - rvm: 2.2.10
       gemfile: Gemfile
       script: bundle exec rspec
-      after_script: ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.rspec.json coverage/rspec/.resultset.json
+      env: TEST_SUITE=rspec
     - rvm: 2.2.10
       gemfile: Gemfile
       script: bundle exec cucumber
-      after_script: ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.cucumber.json coverage/cucumber/.resultset.json
+      env: TEST_SUITE=rspec
 before_script:
   - mysql -e 'CREATE DATABASE bio_test;'
   - "cp .travis.database.yml ./config/database.yml"
@@ -25,5 +25,6 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 after_script:
+  - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.$TEST_SUITE.json coverage/$TEST_SUITE/.resultset.json
   - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
   - ./cc-test-reporter upload-coverage
