--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ matrix:
   include:
     - rvm: 2.2.10
       gemfile: Gemfile
-      script: bundle exec rspec
       env: TEST_SUITE=rspec
+      script: bundle exec rspec
     - rvm: 2.2.10
+      env: TEST_SUITE=cucumber
       gemfile: Gemfile
       script: bundle exec cucumber
-      env: TEST_SUITE=rspec
 before_script:
   - mysql -e 'CREATE DATABASE bio_test;'
   - "cp .travis.database.yml ./config/database.yml"
@@ -25,6 +25,6 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 after_script:
-  - ./cc-test-reporter format-coverage -t simplecov -o coverage/codeclimate.$TEST_SUITE.json coverage/$TEST_SUITE/.resultset.json
-  - ./cc-test-reporter sum-coverage coverage/codeclimate.*.json -p 2
-  - ./cc-test-reporter upload-coverage
+  - ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.$TEST_SUITE.json
+  - ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o /tmp/coverage/specs.json
+  - ./cc-test-reporter upload-coverage --input /tmp/coverage/specs.json
