--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 env:
-  matrix:
-    - TEST_SUITE=rspec
-    - TEST_SUITE=cucumber
+  # matrix:
+  #   - TEST_SUITE=rspec
+  #   - TEST_SUITE=cucumber
   global:
     - CC_TEST_REPORTER_ID=62c3cc32f27d201dd0c1b5bfa6f345a0d9c8caf2d98488eff43839b8d308c7cf
 language: ruby
@@ -17,8 +17,15 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-script: bundle exec $TEST_SUITE
-after_script:
-  - ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.$TEST_SUITE.json
-  - ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o /tmp/coverage/codeclimate.json
-  - ./cc-test-reporter upload-coverage -i "/tmp/coverage/codeclimate.json"
+# script: bundle exec $TEST_SUITE
+# after_script:
+#   - ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.$TEST_SUITE.json
+#   - ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o /tmp/coverage/codeclimate.json
+#   - ./cc-test-reporter upload-coverage -i "/tmp/coverage/codeclimate.json"
+
+jobs:
+  include:
+    - script: bundle exec rspec && ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.rspec.json
+    - script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.cucumber.json
+    - stage: codeclimate
+      script: ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o /tmp/coverage/codeclimate.json && ./cc-test-reporter upload-coverage -i "/tmp/coverage/codeclimate.json"
