--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 env:
-  # matrix:
-  #   - TEST_SUITE=rspec
-  #   - TEST_SUITE=cucumber
+  matrix:
+    - TEST_SUITE=rspec
+    - TEST_SUITE=cucumber
   global:
     - CC_TEST_REPORTER_ID=62c3cc32f27d201dd0c1b5bfa6f345a0d9c8caf2d98488eff43839b8d308c7cf
 language: ruby
