--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
 #   - ./cc-test-reporter upload-coverage -i "/tmp/coverage/codeclimate.json"
 
 jobs:
-  allow_failures:
+  include:
     - script: bundle exec $TEST_SUITE && ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.$TEST_SUITE.json
     - stage: codeclimate
       script: ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o /tmp/coverage/codeclimate.json && ./cc-test-reporter upload-coverage -i "/tmp/coverage/codeclimate.json"
