--- a/.travis.yml
+++ b/.travis.yml
@@ -36,9 +36,9 @@ jobs:
     - stage: test
       workspaces:
         use: shared
-      script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o codeclimate.cucumber.json && ls -alFX
+      script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o codeclimate.cucumber.json && ls -alFX && ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
 
-    - stage: codeclimate
-      workspaces:
-        use: shared
-      script: ls -alFX && ls -alFX coverage/ && ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
+    # - stage: codeclimate
+    #   workspaces:
+    #     use: shared
+    #   script: ls -alFX && ls -alFX coverage/ && ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
