--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 cache:
   bundler: true
   directories:
-    - $HOME/coverage
+  - $HOME/coverage
 rvm:
   - 2.2.10
 before_script:
@@ -18,6 +18,9 @@ before_script:
   - ./cc-test-reporter before-build
 
 jobs:
+  fast_finish: true
+  allow_failures:
+    - name: test
   include:
     - stage: test
       script: bundle exec rspec && ./cc-test-reporter format-coverage -t simplecov -o $HOME/coverage/codeclimate.rspec.json && ls -alFX $HOME/coverage
