--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,6 @@ services:
   - mysql
 cache:
   bundler: true
-  directories:
-  - $HOME/coverage
 rvm:
   - 2.2.10
 before_script:
@@ -17,38 +15,36 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
-jobs:
-  fast_finish: true
-  allow_failures:
-    - name: test
-  include:
-    - stage: test
-      script: bundle exec rspec && ./cc-test-reporter format-coverage -t simplecov -o $HOME/coverage/codeclimate.rspec.json && ls -alFX $HOME/coverage
-    - stage: test
-      script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o $HOME/coverage/codeclimate.cucumber.json && ls -alFX $HOME/coverage
-deploy:
-  provider: script
-  script: ls -alFX $HOME/coverage/ && ./cc-test-reporter sum-coverage $HOME/coverage/codeclimate.*.json -p 2 -o $HOME/coverage/codeclimate.json && ./cc-test-reporter upload-coverage -i $HOME/coverage/codeclimate.json
-  on:
-    all_branches: true
-
 # jobs:
 #   include:
 #     - stage: test
-#       script: bundle exec rspec && ./cc-test-reporter format-coverage -t simplecov -o codeclimate.rspec.json && ls -alFX
-#       workspaces:
-#         create:
-#           name: rspec
-#           paths: .
+#       script: bundle exec rspec && ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.rspec.json
 #     - stage: test
-#       script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o codeclimate.cucumber.json && ls -alFX
-#       workspaces:
-#         create:
-#           name: cucumber
-#           paths: .
-#     - stage: codeclimate
-#       workspaces:
-#         use:
-#           - rspec
-#           - cucumber
-#       script: ls -alFX && ls -alFX coverage/ && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
+#       script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.cucumber.json
+#     - stage: deploy
+#       script: ls -alFX /tmp/coverage/ && ls -alFX coverage/ && ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o /tmp/coverage/codeclimate.json && ./cc-test-reporter upload-coverage -i "/tmp/coverage/codeclimate.json"
+
+
+jobs:
+  include:
+    - stage: test
+      script: bundle exec rspec && ./cc-test-reporter format-coverage -t simplecov -o codeclimate.rspec.json
+      workspaces:
+        create:
+          name: rspec
+          paths: .
+    - stage: test
+      script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o codeclimate.cucumber.json
+      workspaces:
+        create:
+          name: cucumber
+          paths: .
+    - stage: codeclimate
+      install: skip
+      before_script: skip
+      script: skip
+      workspaces:
+        use:
+          - rspec
+          - cucumber
+      script: ls -alFX ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
