Disable git clone

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,8 @@ jobs:
           name: cucumber
           paths: .
     - stage: codeclimate
+      git:
+        clone: false
       language: minimal
       install: skip
       before_script: skip
