Try using deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,16 +40,23 @@ jobs:
         create:
           name: cucumber
           paths: .
-    - stage: codeclimate
-      git:
-        clone: false
-      language: minimal
-      install: skip
-      before_script: skip
-      script: skip
-      services: skip
-      workspaces:
-        use:
-          - rspec
-          - cucumber
-      script: mkdir -p regic/rails5 && cd regic/rails5 && ls -alFX && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
+    # - stage: codeclimate
+    #   git:
+    #     clone: false
+    #   language: minimal
+    #   install: skip
+    #   before_script: skip
+    #   script: skip
+    #   services: skip
+    #   workspaces:
+    #     use:
+    #       - rspec
+    #       - cucumber
+    #   script: mkdir -p regic/rails5 && cd regic/rails5 && ls -alFX && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
+deploy:
+  provider: script
+  workspaces:
+    use:
+      - rspec
+      - cucumber
+  script: mkdir -p regic/rails5 && cd regic/rails5 && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
