--- a/.travis.yml
+++ b/.travis.yml
@@ -40,24 +40,17 @@ jobs:
         create:
           name: cucumber
           paths: .
-    # - stage: codeclimate
-    #   git:
-    #     clone: false
-    #   language: minimal
-    #   install: skip
-    #   before_script: skip
-    #   script: skip
-    #   services: skip
-    #   workspaces:
-    #     use:
-    #       - rspec
-    #       - cucumber
-    #   script: mkdir -p regic/rails5 && cd regic/rails5 && ls -alFX && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
-      deploy:
-        skip-cleanup: true
-        provider: script
-        workspaces:
-          use:
-            - rspec
-            - cucumber
-        script: mkdir -p regic/rails5 && cd regic/rails5 && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
+    - stage: codeclimate
+      git:
+        clone: false
+      language: minimal
+      install: skip
+      before_script: skip
+      script: skip
+      services: skip
+      workspaces:
+        use:
+          - rspec
+          - cucumber
+      script: mkdir -p regic/rails5 && cd regic/rails5 && ls -alFX && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
+      if: branch = master
