--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ services:
 cache:
   bundler: true
   apt: true
+  directories:
+    - "$HOME/coverage"
 rvm:
   - 2.2.10
 before_script:
@@ -16,41 +18,15 @@ before_script:
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
-# jobs:
-#   include:
-#     - stage: test
-#       script: bundle exec rspec && ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.rspec.json
-#     - stage: test
-#       script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.cucumber.json
-#     - stage: deploy
-#       script: ls -alFX /tmp/coverage/ && ls -alFX coverage/ && ./cc-test-reporter sum-coverage /tmp/coverage/codeclimate.*.json -p 2 -o /tmp/coverage/codeclimate.json && ./cc-test-reporter upload-coverage -i "/tmp/coverage/codeclimate.json"
-
-
 jobs:
   include:
     - stage: test
-      script: bundle exec rspec && ./cc-test-reporter format-coverage -t simplecov -o codeclimate.rspec.json
-      workspaces:
-        create:
-          name: rspec
-          paths: .
+      script: bundle exec rspec && ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.rspec.json
+      deploy:
+        provider: script
+        script: pwd && ls -alFX && cd $HOME/coverage && ls -alFX
     - stage: test
-      script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o codeclimate.cucumber.json
-      workspaces:
-        create:
-          name: cucumber
-          paths: .
-    - stage: codeclimate
-      git:
-        clone: false
-      language: minimal
-      install: skip
-      before_script: skip
-      script: skip
-      services: skip
-      workspaces:
-        use:
-          - rspec
-          - cucumber
-      script: mkdir -p regic/rails5 && cd regic/rails5 && ls -alFX && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json
-      if: branch = master
+      script: bundle exec cucumber && ./cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.cucumber.json
+      deploy:
+        provider: script
+        script: pwd && ls -alFX && cd $HOME/coverage && ls -alFX
