--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ jobs:
       deploy:
         provider: script
         script: pwd && ls -alFX && cd /home/travis/build/regic/rails5/coverage && ls -alFX
+        skip_cleanup: true
         on:
           all_branches: true
     - stage: test
@@ -32,5 +33,6 @@ jobs:
       deploy:
         provider: script
         script: pwd && ls -alFX && cd /home/travis/build/regic/rails5/coverage && ls -alFX
+        skip_cleanup: true
         on:
           all_branches: true
