--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ before_script:
 
 
 jobs:
+  allow_failures:
+    - name: codeclimate
   include:
     - stage: test
       script: bundle exec rspec && /tmp/coverage/cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.rspec.json
@@ -41,6 +43,7 @@ jobs:
           name: cucumber
           paths: /tmp/coverage
     - stage: codeclimate
+      name: codeclimate
       git:
         clone: false
       language: minimal
