--- a/.travis.yml
+++ b/.travis.yml
@@ -23,13 +23,15 @@ jobs:
     - stage: test
       script: 
         - bundle exec rspec
-        - STATUS=$? && /tmp/coverage/cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.rspec.json && ls -alFX /tmp/coverage && if [[ "$STATUS" == 1 ]]; then touch /tmp/coverage/fail && echo "RSPEC_FAIL"; else echo "RSPEC_PASS"; fi
+        - STATUS=$? && /tmp/coverage/cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.rspec.json && if [[ "$STATUS" == 1 ]]; then touch /tmp/coverage/fail; fi
       workspaces:
         create:
           name: rspec
           paths: /tmp/coverage
     - stage: test
-      script: bundle exec cucumber; STATUS=$?; /tmp/coverage/cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.cucumber.json; ls -alFX /tmp/coverage; if [[ "$STATUS" == 1 ]]; then touch /tmp/coverage/fail && echo "CUCUMBER_FAIL" && exit 1; else echo "CUCUMBER_PASS"; fi
+      script:
+        - bundle exec cucumber
+        - STATUS=$? && /tmp/coverage/cc-test-reporter format-coverage -t simplecov -o /tmp/coverage/codeclimate.cucumber.json && if [[ "$STATUS" == 1 ]]; then touch /tmp/coverage/fail; fi
       workspaces:
         create:
           name: cucumber
@@ -46,5 +48,5 @@ jobs:
         use:
           - rspec
           - cucumber
-      script: cd /tmp/coverage && ls -alFX && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json && if [ -f /tmp/coverage/fail ]; then echo "FFAAIILL"; exit 1; else echo "PPAASSSS"; fi
+      script: cd /tmp/coverage && ./cc-test-reporter sum-coverage codeclimate.*.json -p 2 -o codeclimate.json && ./cc-test-reporter upload-coverage -i codeclimate.json && if [ -f /tmp/coverage/fail ]; then exit 1; fi
       # if: branch = master
